# Medical_Reminder_Puch

./: README.md  claude_config.json  main.py  pyproject.toml  test_client.py  test_payload.json  test_payloads.json
medicine_reminder_mcp_server.egg-info/: requires
puch_ai_mcp_server.egg-info/: PKG-INFO  SOURCES  requires
